java p12: apply both forks' primary-source findings — corrections to shipped pages
The two devbible-author forks went to HotSpot source at tag jdk-25+36 and to the JEPs,
and found several things the java man page does not say. Applying them to pages that
were already committed with the weaker or wrong version.

CORRECTIONS TO FACTS ALREADY SHIPPED:
- UseCompressedClassPointers is DEPRECATED in JDK 25, obsolete in 26 (arguments.cpp
  special_jvm_flags). 09b said nothing; advice to disable it had a one-release life.
- CompressedClassSpaceSize default is 1 GB and is absent from the man page entirely.
  09b told the reader to 'check the defaults'; it can now state them.
- JEP 534 Compact Object Headers by Default is Closed/Delivered for Release 27. The man
  page's 'eventually will be the only mode of operation' now has a version. Also: no
  unlock flag needed on 25; requires compressed class pointers (32->22 bits); SILENTLY
  disables itself under legacy locking. Size numbers belong to JEP 450, not 519.
- MaxDirectMemorySize defaults to -Xmx (VM.java -> Runtime.getRuntime().maxMemory()),
  not to a share of it. 11c implied a bounded budget.
- NOTHING bounds memory-mapped files - separate pools, no Bits.reserveMemory call.
- The OOME message list is SEVEN documented, not eight, and the native-thread and
  direct-buffer messages are real but not in the guide. 12's table and topic 04's plan
  both said eight. Exact strings now quoted.
- HeapDumpOnOutOfMemoryError fires ONLY for heap exhaustion (man page, verbatim). 12
  recommended it without the caveat; it covers four of the nine rows, not all of them.
- -XX:InitialTLABSize DOES NOT EXIST; the flag is -XX:TLABSize. Topic 01's plan named
  a flag that has never existed.
- Weakest surviving claim flagged in place: that direct buffers land in NMT's 'Other'
  category. The guide does not name them. Now hedged and routed to BufferPoolMXBean.

SPLITS, both proven (wc -l and grep -c '^\*\*★' before and after, both UP):
- 09b ->